# CPZKp

./: Cargo.toml
.github/workflows/: ci.yml
.history/: Cargo_20250115155951.toml  Cargo_20250115160122.toml  Cargo_20250115160800.toml  Cargo_20250416162239.toml  Cargo_20250416164013.toml  README_20250115160026.md  README_20250416162357.md  README_20250416164021.md  README_20250416164101.md  build_20250115160800.rs
.history/.github/workflows/: ci_20250115160132.yml
.history/benches/: zkp_operations_20250115155453.rs
.history/bindings/go/: cpzkp_20250416163656.go
.history/book/src/: contributing_20250416163355.md  contributing_20250416163812.md  contributing_20250416164038.md  implementation_20250416162656.md  implementation_20250416162800.md  introduction_20250416162408.md
.history/book/src/examples/: playground_20250416163019.md  playground_20250416163800.md
.history/src/: lib_20250115155021.rs  lib_20250115155035.rs  lib_20250115155053.rs  lib_20250115155120.rs  lib_20250115155409.rs  lib_20250115160026.rs  lib_20250115160057.rs  lib_20250115160153.rs  lib_20250115160309.rs  lib_20250115160330.rs  lib_20250115160352.rs  lib_20250115160414.rs  lib_20250115160432.rs  lib_20250115160521.rs  lib_20250115160531.rs  lib_20250115160605.rs  lib_20250115160654.rs  lib_20250115161835.rs  secp256k1_20250115161811.rs
.history/src/client/: main_20250115155216.rs
.history/tests/: README_20250416164601.md
.history/tests/integration/: session_tests_20250416164622.rs
.history/tests/property/: scalar_proptest_20250416164622.rs
benches/: zkp_benchmarks.rs
bindings/python/: lib.rs
book/src/: SUMMARY.md  architecture.md  benchmarks.md  introduction.md  protocol.md  security.md
book/src/usage/: cli.md  java.md  python.md  wasm.md
examples/: ethereum_integration.rs
examples/playground/: Cargo.toml  index.html
examples/playground/src/: lib.rs
examples/webapp/: Cargo.toml  Dockerfile
examples/webapp/src/: lib.rs
proptest-regressions/: lib.txt
src/: curve25519.rs  ecc.rs  lib.rs  scalar.rs  session.rs  traits.rs  types.rs  wasm.rs
tests/unit/: scalar_tests.rs
(+4 files in other folders)
