[package]
name = "chaum-pedersen-zkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.3"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.1"
num-bigint = "0.4.3"
rand = "0.8.5"
num = "0.4.3"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.12.2"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
