[package]
edition = "2021"
name = "cpzkp-playground"
version = "0.1.0"

[dependencies]
cpzkp = {path = "../..", features = ["wasm"]}
js-sys = "0.3"
monaco = {git = "https://github.com/rustwasm/monaco"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "console",
]}
